Refactor: add users module